# frontogether

./: README.md  pyproject.toml
frontogether/: agent.py  canvas.py  gui.py  server.py  worker.py
frontogether/prompts/: message.j2  system.j2
