[tool.poetry]
name = "frontogether"
version = "0.1.0"
description = ""
authors = ["Thiago Cardoso <thiagoncc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
PySide6 = "6.7.2"
litellm = "1.41.14"
Jinja2 = "3.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

